force-app/main/default/objects/Contact/fields/Added_Time__c.field-meta.xml
<CustomField>
    <fullName>Added_Time__c</fullName>
    <label>Added Time</label>
    <type>DateTime</type>
</CustomField>