force-app/main/default/objects/Contact/fields/additionalNames__c.field-meta.xml
<CustomField>
    <fullName>additionalNames__c</fullName>
    <label>Additional Names</label>
    <length>50</length>
    <type>Text</type>
</CustomField>