force-app/main/default/objects/Contact/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <label>Available</label>
    <type>Date</type>
</CustomField>