force-app/main/default/objects/Contact/fields/Blacklist_Counts__c.field-meta.xml
<CustomField>
    <fullName>Blacklist_Counts__c</fullName>
    <label>Blacklist Counts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>