force-app/main/default/objects/Contact/fields/bringingPet__c.field-meta.xml
<CustomField>
    <fullName>bringingPet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bringing Pet</label>
    <type>Checkbox</type>
</CustomField>