force-app/main/default/objects/Contact/fields/Child_Record__c.field-meta.xml
<CustomField>
    <fullName>Child_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Record</label>
    <type>Checkbox</type>
</CustomField>