force-app/main/default/objects/Contact/fields/Citizenships__c.field-meta.xml
<CustomField>
    <fullName>Citizenships__c</fullName>
    <label>Citizenships</label>
    <length>100</length>
    <type>Text</type>
</CustomField>