force-app/main/default/objects/Contact/fields/countryOfBirth__c.field-meta.xml
<CustomField>
    <fullName>countryOfBirth__c</fullName>
    <label>Country Of Birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Picklist</valueSetName>
    </valueSet>
</CustomField>