force-app/main/default/objects/Contact/fields/Course_Major__c.field-meta.xml
<CustomField>
    <fullName>Course_Major__c</fullName>
    <label>Course/Major</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Demo1</fullName>
            </value>
            <value>
                <fullName>Demo2</fullName>
            </value>
            <value>
                <fullName>Demo3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>