force-app/main/default/objects/Contact/fields/Criminal_Record__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criminal Record</label>
    <type>Checkbox</type>
</CustomField>