force-app/main/default/objects/Contact/fields/criminalRecordDetails__c.field-meta.xml
<CustomField>
    <fullName>criminalRecordDetails__c</fullName>
    <label>Criminal Record Details</label>
    <type>TextArea</type>
</CustomField>