force-app/main/default/objects/Contact/fields/currentCountryOfResidence__c.field-meta.xml
<CustomField>
    <fullName>currentCountryOfResidence__c</fullName>
    <label>Country Of Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Picklist</valueSetName>
    </valueSet>
</CustomField>