force-app/main/default/objects/Contact/fields/Curriculum_Experience__c.field-meta.xml
<CustomField>
    <fullName>Curriculum_Experience__c</fullName>
    <label>Curriculum Experience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Placement (AP)</fullName>
            </value>
            <value>
                <fullName>Australian</fullName>
            </value>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Canadian</fullName>
            </value>
            <value>
                <fullName>Common Care</fullName>
            </value>
            <value>
                <fullName>IB MYP</fullName>
            </value>
            <value>
                <fullName>ESL/EFL</fullName>
            </value>
            <value>
                <fullName>IB Career-related Program (IBCP)</fullName>
            </value>
            <value>
                <fullName>IB DP</fullName>
            </value>
            <value>
                <fullName>IB PYP</fullName>
            </value>
            <value>
                <fullName>IEYC</fullName>
            </value>
            <value>
                <fullName>IMYC</fullName>
            </value>
            <value>
                <fullName>IPC</fullName>
            </value>
            <value>
                <fullName>Irish</fullName>
            </value>
            <value>
                <fullName>Montessori</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pearson</fullName>
            </value>
            <value>
                <fullName>SAT</fullName>
            </value>
            <value>
                <fullName>STEM</fullName>
            </value>
            <value>
                <fullName>Southern African</fullName>
            </value>
            <value>
                <fullName>UK - A - Levels</fullName>
            </value>
            <value>
                <fullName>UK - GCSE</fullName>
            </value>
            <value>
                <fullName>UK - IGCSE</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>