force-app/main/default/objects/Contact/fields/Date_of_Availability__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Availability__c</fullName>
    <label>Date of Availability</label>
    <type>Date</type>
</CustomField>