force-app/main/default/objects/Contact/fields/Degree_In_Education__c.field-meta.xml
<CustomField>
    <fullName>Degree_In_Education__c</fullName>
    <label>Degree In Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>