force-app/main/default/objects/Contact/fields/Degree_Type__c.field-meta.xml
<CustomField>
    <fullName>Degree_Type__c</fullName>
    <label>Degree Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Demo1</fullName>
            </value>
            <value>
                <fullName>Demo2</fullName>
            </value>
            <value>
                <fullName>Demo3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>