force-app/main/default/objects/Contact/fields/Disable_User__c.field-meta.xml
<CustomField>
    <fullName>Disable_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable User</label>
    <type>Checkbox</type>
</CustomField>