force-app/main/default/objects/Contact/fields/Educational_Technology_Platforms__c.field-meta.xml
<CustomField>
    <fullName>Educational_Technology_Platforms__c</fullName>
    <label>Educational Technology/Platforms</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>