force-app/main/default/objects/Contact/fields/euPassport__c.field-meta.xml
<CustomField>
    <fullName>euPassport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EU Passport</label>
    <type>Checkbox</type>
</CustomField>