force-app/main/default/objects/Contact/fields/Has_Iss_Account__c.field-meta.xml
<CustomField>
    <fullName>Has_Iss_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Iss Account</label>
    <type>Checkbox</type>
</CustomField>