force-app/main/default/objects/Contact/fields/Hobbies_Interests__c.field-meta.xml
<CustomField>
    <fullName>Hobbies_Interests__c</fullName>
    <label>Hobbies/Interests</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>