force-app/main/default/objects/Contact/fields/Honors_Awards_Fellowships__c.field-meta.xml
<CustomField>
    <fullName>Honors_Awards_Fellowships__c</fullName>
    <label>Honors/Awards/Fellowships</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>