force-app/main/default/objects/Contact/fields/ifairs_Reminder__c.field-meta.xml
<CustomField>
    <fullName>ifairs_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ifairs Reminder</label>
    <type>Checkbox</type>
</CustomField>