force-app/main/default/objects/Contact/fields/isVisibleToSchool__c.field-meta.xml
<CustomField>
    <fullName>isVisibleToSchool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible To School</label>
    <type>Checkbox</type>
</CustomField>