force-app/main/default/objects/Contact/fields/keyRelationships__c.field-meta.xml
<CustomField>
    <fullName>keyRelationships__c</fullName>
    <label>Key Relationships</label>
    <length>30</length>
    <type>Text</type>
</CustomField>