force-app/main/default/objects/Contact/fields/languagesSpoken__c.field-meta.xml
<CustomField>
    <fullName>languagesSpoken__c</fullName>
    <label>languagesSpoken</label>
    <length>100</length>
    <type>Text</type>
</CustomField>