force-app/main/default/objects/Contact/fields/Master__c.field-meta.xml
<CustomField>
    <fullName>Master__c</fullName>
    <label>Master</label>
    <length>18</length>
    <type>Text</type>
</CustomField>