force-app/main/default/objects/Contact/fields/MongoDB_Id__c.field-meta.xml
<CustomField>
    <fullName>MongoDB_Id__c</fullName>
    <label>MongoDB Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>