force-app/main/default/objects/Contact/fields/MongoDB_Owner__c.field-meta.xml
<CustomField>
    <fullName>MongoDB_Owner__c</fullName>
    <label>MongoDB Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>