force-app/main/default/objects/Contact/fields/Name_Of_Institute__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Institute__c</fullName>
    <label>Name Of Institute</label>
    <length>18</length>
    <type>Text</type>
</CustomField>