force-app/main/default/objects/Contact/fields/new_Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>new_Relationship_Status__c</fullName>
    <label>new Relationship Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>