force-app/main/default/objects/Contact/fields/No_of_Applied_Job__c.field-meta.xml
<CustomField>
    <fullName>No_of_Applied_Job__c</fullName>
    <label>No of Applied Job</label>
    <summaryFilterItems>
        <field>Candidate_Job__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Applied</value>
    </summaryFilterItems>
    <summaryForeignKey>Candidate_Job__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>