force-app/main/default/objects/Contact/fields/Notes_for_Blacklist__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Blacklist__c</fullName>
    <label>Notes for Blacklist</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>