force-app/main/default/objects/Contact/fields/otherOrSupport__c.field-meta.xml
<CustomField>
    <fullName>otherOrSupport__c</fullName>
    <label>otherOrSupport</label>
    <length>100</length>
    <type>Text</type>
</CustomField>