force-app/main/default/objects/Contact/fields/petDetails__c.field-meta.xml
<CustomField>
    <fullName>petDetails__c</fullName>
    <label>Pet Details</label>
    <type>TextArea</type>
</CustomField>