force-app/main/default/objects/Contact/fields/Preferred_Jobtype__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Jobtype__c</fullName>
    <label>Preferred Jobtype</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Short Term/Summer</fullName>
            </value>
            <value>
                <fullName>Student Teacher</fullName>
            </value>
            <value>
                <fullName>Substitute/Supply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>