force-app/main/default/objects/Contact/fields/preK12CouselorOrPsychOrSLP__c.field-meta.xml
<CustomField>
    <fullName>preK12CouselorOrPsychOrSLP__c</fullName>
    <label>preK12CouselorOrPsychOrSLP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>