force-app/main/default/objects/Contact/fields/preK12DepHeadOrCoordOrTeacherLeader__c.field-meta.xml
<CustomField>
    <fullName>preK12DepHeadOrCoordOrTeacherLeader__c</fullName>
    <label>preK12DepHeadOrCoordOrTeacherLeader</label>
    <length>100</length>
    <type>Text</type>
</CustomField>