force-app/main/default/objects/Contact/fields/preK12Librarian__c.field-meta.xml
<CustomField>
    <fullName>preK12Librarian__c</fullName>
    <label>preK12Librarian</label>
    <length>255</length>
    <type>Text</type>
</CustomField>