force-app/main/default/objects/Contact/fields/preK12SchoolLeader__c.field-meta.xml
<CustomField>
    <fullName>preK12SchoolLeader__c</fullName>
    <label>preK12SchoolLeader</label>
    <length>100</length>
    <type>Text</type>
</CustomField>