force-app/main/default/objects/Contact/fields/preK12Teacher__c.field-meta.xml
<CustomField>
    <fullName>preK12Teacher__c</fullName>
    <label>Pre K12 Teacher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>