force-app/main/default/objects/Contact/fields/Professional_Development_Continuing_Educ__c.field-meta.xml
<CustomField>
    <fullName>Professional_Development_Continuing_Educ__c</fullName>
    <label>Professional Development/Continuing Educ</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>