force-app/main/default/objects/Contact/fields/professionalSocialMediaId__c.field-meta.xml
<CustomField>
    <fullName>professionalSocialMediaId__c</fullName>
    <label>Social Media Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>