force-app/main/default/objects/Contact/fields/ProfileCompletionPercentage__c.field-meta.xml
<CustomField>
    <fullName>ProfileCompletionPercentage__c</fullName>
    <label>Profile Completion Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>