force-app/main/default/objects/Contact/fields/profileVisibility__c.field-meta.xml
<CustomField>
    <fullName>profileVisibility__c</fullName>
    <label>Profile Visibility</label>
    <length>30</length>
    <type>Text</type>
</CustomField>