force-app/main/default/objects/Contact/fields/refereeRating__c.field-meta.xml
<CustomField>
    <fullName>refereeRating__c</fullName>
    <label>refereeRating</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>