force-app/main/default/objects/Contact/fields/resumeFileName__c.field-meta.xml
<CustomField>
    <fullName>resumeFileName__c</fullName>
    <label>Resume File Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>