force-app/main/default/objects/Contact/fields/resumeUploadedDate__c.field-meta.xml
<CustomField>
    <fullName>resumeUploadedDate__c</fullName>
    <label>Resume Uploaded Date</label>
    <type>Date</type>
</CustomField>