force-app/main/default/objects/Contact/fields/resumeUrl__c.field-meta.xml
<CustomField>
    <fullName>resumeUrl__c</fullName>
    <label>Resume Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>