force-app/main/default/objects/Contact/fields/Searching_Vacancies_As_Team__c.field-meta.xml
<CustomField>
    <fullName>Searching_Vacancies_As_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Searching Vacancies As Team</label>
    <type>Checkbox</type>
</CustomField>