force-app/main/default/objects/Contact/fields/SkypeId__c.field-meta.xml
<CustomField>
    <fullName>SkypeId__c</fullName>
    <label>SkypeId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>