force-app/main/default/objects/Contact/fields/Stripe_Customer__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer__c</fullName>
    <label>Stripe Customer</label>
    <type>TextArea</type>
</CustomField>