force-app/main/default/objects/Contact/fields/stripeCustomerId__c.field-meta.xml
<CustomField>
    <fullName>stripeCustomerId__c</fullName>
    <label>Stripe CustomerId</label>
    <type>TextArea</type>
</CustomField>