force-app/main/default/objects/Contact/fields/totalYearsWorkedOverseas__c.field-meta.xml
<CustomField>
    <fullName>totalYearsWorkedOverseas__c</fullName>
    <label>totalYearsWorkedOverseas</label>
    <length>100</length>
    <type>Text</type>
</CustomField>