force-app/main/default/objects/Contact/fields/travellingWithCandidate__c.field-meta.xml
<CustomField>
    <fullName>travellingWithCandidate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travelling With Candidate</label>
    <type>Checkbox</type>
</CustomField>