force-app/main/default/objects/Contact/fields/universityOrCollege__c.field-meta.xml
<CustomField>
    <fullName>universityOrCollege__c</fullName>
    <label>universityOrCollege</label>
    <length>100</length>
    <type>Text</type>
</CustomField>