force-app/main/default/objects/Contact/fields/Updated_Time__c.field-meta.xml
<CustomField>
    <fullName>Updated_Time__c</fullName>
    <label>Updated Time</label>
    <type>DateTime</type>
</CustomField>