force-app/main/default/objects/Contact/fields/userName__c.field-meta.xml
<CustomField>
    <fullName>userName__c</fullName>
    <label>Username</label>
    <length>200</length>
    <type>Text</type>
</CustomField>