force-app/main/default/objects/Contact/fields/VideoLink__c.field-meta.xml
<CustomField>
    <fullName>VideoLink__c</fullName>
    <label>VideoLink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>