force-app/main/default/objects/Contact/fields/VisibilityAutoSet__c.field-meta.xml
<CustomField>
    <fullName>VisibilityAutoSet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visibility AutoSet</label>
    <type>Checkbox</type>
</CustomField>