force-app/main/default/objects/Contact/fields/website__c.field-meta.xml
<CustomField>
    <fullName>website__c</fullName>
    <label>website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>