force-app/main/default/objects/Contact/fields/yearsOfExperience__c.field-meta.xml
<CustomField>
    <fullName>yearsOfExperience__c</fullName>
    <label>Year Of Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>