force-app/main/default/objects/Contact/listViews/Blacklisted_Users.listView-meta.xml
<ListView>
    <fullName>Blacklisted_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>Notes_for_Blacklist__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Blacklisted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Blacklisted Users</label>
</ListView>